# ur_dashboard_to_opcua_gateway

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  README.md  pytest.ini
.github/workflows/: ci.yml
code/: .gitignore  Dockerfile  pyproject.toml
code/src/ur_dashboard_to_opcua_gateway/: _01_main.py  _02_parse_command_line_args.py  _03_compose_gateway.py  _04_discover_ur_programs.py  _05_control_ur_programs_and_exchange_parameters_via_dashboard_and_rtde.py  _05_control_ur_programs_via_dashboard.py  _06_combine_program_discovery_and_control.py  _07_expose_program_commands_via_opcua.py  __init__.py  args.py  gateway.py  main.py
docs/: README.md  architecture.md  features.md  multi-protocol-gateway-architecture.md  package-publication.md  reusable-package-extraction.md  testing.md
tests/: README.md  __init__.py  conftest.py  program_fixture.py  pytest.ini  robot_lab.py  run_system_tests.py  test_namespace_imports.py  test_system.py  test_unit.py  test_unit_behaviour.py  waiting.py
tests/architecture/: __init__.py  test_repository_conventions.py
tests/containers/: __init__.py  gateway_container.py  openssh_container.py  ursim_container.py
tests/docker/openssh/: Dockerfile  entrypoint.sh  sshd_config
tests/support/: __init__.py  program_fixture.py  waiting.py
tests/system/: __init__.py  conftest.py  docker_engine.py  robot_lab.py  run.py  test_gateway.py  test_rtde_client.py
tests/system/containers/: __init__.py  gateway_container.py  openssh_container.py  ursim_container.py
tests/system/docker/openssh/: Dockerfile  entrypoint.sh  sshd_config
tests/unit/: __init__.py  test_behaviour.py  test_components.py
