[build-system]
requires = ["setuptools>=69,<76"]
build-backend = "setuptools.build_meta"

[project]
name = "ur_dashboard_to_opcua_gateway"
version = "1.4.0"
description = "Expose Universal Robots programs and status through OPC UA"
readme = {text = "ur_dashboard_to_opcua_gateway", content-type = "text/markdown"}
requires-python = ">=3.8.3"
dependencies = [
    "declarative-opcua-server==0.3.0",
    "universal-robots-clients[rtde]==0.3.0",
]

[project.optional-dependencies]
sftp = [
    "universal-robots-clients[sftp,rtde]==0.3.0",
]
test = [
    "pytest>=8,<9",
]
system-test = [
    "docker>=7,<8; python_version >= '3.10'",
    "pytest>=8,<10; python_version >= '3.10'",
    "testcontainers==4.14.2; python_version >= '3.10'",
    "universal-robots-clients[sftp,rtde]==0.3.0",
]
format = [
    "black>=24,<25",
    "mdformat>=0.7,<1",
    "mdformat-gfm>=0.3,<1",
]
type-check = [
    "mypy==1.14.1",
    "pytest>=8,<9",
    "types-paramiko==3.5.0.20240928",
]

[project.scripts]
ur_dashboard_to_opcua_gateway = "ur_dashboard_to_opcua_gateway.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 160
target-version = ["py38"]
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.8"
files = [
    "code/src",
    "tests",
]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["asyncua", "asyncua.*", "testcontainers", "testcontainers.*"]
ignore_missing_imports = true
follow_imports = "skip"
